apply formatting fixes suggested by intellij